@@ -31,7 +31,7 @@ public abstract class RarityMixin {
 
     @SuppressWarnings("InvokerTarget")
     @Invoker("<init>")
-    private static Rarity newRarity(String internalName, int internalId, Formatting formatting) {
+    private static Rarity newRarity(String internalName, int internalId, int id, String name, Formatting formatting) {
 
         throw new AssertionError();
     }
@@ -49,14 +49,14 @@ public abstract class RarityMixin {
         registerConfig();
 
         var rarities = new ArrayList<>(Arrays.asList(field_8905));
-        var last = rarities.get(rarities.size() - 1);
+        var last = rarities.getLast();
 
-        var common = newRarity("COMMON", last.ordinal() + 1, RankingOfThings.CONFIG.common_color.getFormatting());
-        var uncommon = newRarity("UNCOMMON", last.ordinal() + 2, RankingOfThings.CONFIG.uncommon_color.getFormatting());
-        var rare = newRarity("RARE", last.ordinal() + 3, RankingOfThings.CONFIG.rare_color.getFormatting());
-        var epic = newRarity("EPIC", last.ordinal() + 4, RankingOfThings.CONFIG.epic_color.getFormatting());
-        var legendary = newRarity("LEGENDARY", last.ordinal() + 5, RankingOfThings.CONFIG.legendary_color.getFormatting());
-        var mythic = newRarity("MYTHIC", last.ordinal() + 6, RankingOfThings.CONFIG.mythic_color.getFormatting());
+        var common = newRarity("COMMON", last.ordinal() + 1, last.ordinal() + 1, "common", RankingOfThings.CONFIG.common_color.getFormatting());
+        var uncommon = newRarity("UNCOMMON", last.ordinal() + 2, last.ordinal() + 2, "uncommon", RankingOfThings.CONFIG.uncommon_color.getFormatting());
+        var rare = newRarity("RARE", last.ordinal() + 3, last.ordinal() + 3, "rare", RankingOfThings.CONFIG.rare_color.getFormatting());
+        var epic = newRarity("EPIC", last.ordinal() + 4, last.ordinal() + 4, "epic", RankingOfThings.CONFIG.epic_color.getFormatting());
+        var legendary = newRarity("LEGENDARY", last.ordinal() + 5, last.ordinal() + 5, "legendary", RankingOfThings.CONFIG.legendary_color.getFormatting());
+        var mythic = newRarity("MYTHIC", last.ordinal() + 6, last.ordinal() + 6, "mythic", RankingOfThings.CONFIG.mythic_color.getFormatting());
 
         CustomRarity.COMMON = common;
         CustomRarity.UNCOMMON = uncommon;
